--- a/BikeSharing/Info.plist
+++ b/BikeSharing/Info.plist
@@ -53,6 +53,18 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Scan qr code</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>To rent a bike</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To rent a bike</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>To rent a bike</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -74,13 +86,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>To rent a bike</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>To rent a bike</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>To rent a bike</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Scan qr code</string>
 </dict>
 </plist>
