--- a/BikeSharing/Info.plist
+++ b/BikeSharing/Info.plist
@@ -63,6 +63,7 @@
 	<string>To rent a bike</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>bluetooth-central</string>
 		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
